@@ -39,3 +39,16 @@
 10011,3	//GD_REGENERATION
 10012,6	//GD_RESTORE
 10013,7	//GD_EMERGENCYCALL
+
+// Mercenary Skills
+8214,7	//MA_CHARGEARROW
+8215,7	//MA_SHARPSHOOTING
+8217,7	//ML_BRANDISHSPEAR
+8218,7	//ML_SPIRALPIERCE
+8221,7	//ML_DEVOTION
+8222,7	//MER_MAGNIFICAT
+8225,7	//MER_CRASH
+8234,7	//MER_DECAGI
+8235,7	//MER_SCAPEGOAT
+8238,7	//MER_KYRIE
+8240,7	//MER_INCAGI
